--- a/css/visual-effects.html
+++ b/css/visual-effects.html
@@ -26,7 +26,7 @@
     <div class="box linear-gradient"></div>
     <h3>Radial</h3>
     <div class="box radial-gradient"></div>
-    <h3>Cónico</h3>
+    <h3>Holitas</h3>
     <div class="box conic-gradient"></div>
     <a href="index.html#temario-css">☝</a>
 </body>
