--- a/css/visual-effects.html
+++ b/css/visual-effects.html
@@ -27,6 +27,7 @@
     <h3>Radial</h3>
     <div class="box radial-gradient"></div>
     <h3>Holitas</h3>
+    <h4>El más bandido</h4>
     <div class="box conic-gradient"></div>
     <a href="index.html#temario-css">☝</a>
 </body>
