--- a/css/visual-effects.html
+++ b/css/visual-effects.html
@@ -28,6 +28,7 @@
     <div class="box radial-gradient"></div>
     <h3>Holitas</h3>
     <h4>El más bandido</h4>
+    <h5>El más bandidito</h5>
     <div class="box conic-gradient"></div>
     <a href="index.html#temario-css">☝</a>
 </body>
