--- a/css/visual-effects.html
+++ b/css/visual-effects.html
@@ -30,6 +30,32 @@
     <h4>El más bandido</h4>
     <h5>El más bandidito</h5>
     <div class="box conic-gradient"></div>
+    <h2>Máscaras</h2>
+    <article class="card clip-path">
+        <img src="assets/puesta-sol.jpg" alt="Puesta de sol">
+    </article>
+    <hr>
+    <h2>Formas</h2>
+    <article class="shapes">
+        <h3>Ejemplos de Formas y Siluetas entre Textos e Imágenes</h3>
+        <img src="assets/puesta-sol.jpg" alt="Puesta de Sol" class="float-left shape-1">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut, fugit perspiciatis itaque autem possimus beatae? Praesentium corrupti atque commodi tenetur officiis quidem doloremque quibusdam temporibus, veritatis exercitationem consectetur laudantium a!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste error distinctio cupiditate consequuntur voluptate doloribus soluta quae dolorem, reiciendis voluptatum excepturi autem delectus voluptas cum consectetur accusantium eius vitae unde?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ad non deserunt odio praesentium unde, eveniet ut cupiditate voluptatum porro asperiores inventore eaque itaque necessitatibus voluptatem odit temporibus saepe nam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum modi placeat explicabo, ipsam consectetur eligendi cum reiciendis quis adipisci quod excepturi hic asperiores expedita rerum ex porro repudiandae ullam saepe.</p>
+        <img src="assets/puesta-sol.jpg" alt="Puesta de Sol" class="float-right shape-2">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut, fugit perspiciatis itaque autem possimus beatae? Praesentium corrupti atque commodi tenetur officiis quidem doloremque quibusdam temporibus, veritatis exercitationem consectetur laudantium a!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste error distinctio cupiditate consequuntur voluptate doloribus soluta quae dolorem, reiciendis voluptatum excepturi autem delectus voluptas cum consectetur accusantium eius vitae unde?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ad non deserunt odio praesentium unde, eveniet ut cupiditate voluptatum porro asperiores inventore eaque itaque necessitatibus voluptatem odit temporibus saepe nam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum modi placeat explicabo, ipsam consectetur eligendi cum reiciendis 
+        quis adipisci quod excepturi hic asperiores expedita rerum ex porro repudiandae ullam saepe.</p>
+        <img src="assets/puesta-sol.jpg" alt="Puesta de Sol" class="float-left shape-3">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut, fugit perspiciatis itaque autem possimus beatae? Praesentium corrupti atque commodi tenetur officiis quidem doloremque quibusdam temporibus, veritatis exercitationem consectetur laudantium a!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste error distinctio cupiditate consequuntur voluptate doloribus soluta quae dolorem, reiciendis voluptatum excepturi autem delectus voluptas cum consectetur accusantium eius vitae unde?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui ad non deserunt odio praesentium unde, eveniet ut cupiditate voluptatum porro asperiores inventore eaque itaque necessitatibus voluptatem odit temporibus saepe nam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum modi placeat explicabo, ipsam consectetur eligendi cum reiciendis 
+        quis adipisci quod excepturi hic asperiores expedita rerum ex porro repudiandae ullam saepe.</p>
+    </article>
     <a href="index.html#temario-css">☝</a>
 </body>
 </html>
