--- a/css/index.html
+++ b/css/index.html
@@ -38,6 +38,9 @@
         <li><a href="tables.html">Tablas en CSS</a></li>
         <li><a href="forms.html">Formularios en CSS</a></li>
         <li><a href="visual-effects.html">Efectos Visuales en CSS</a></li>
+        <li><a href="scroll-one-page.html">Efectos con Scroll (<small>Sitio One Page</small>)</a></li>
+        <li><a href="scroll-snap-slides.html">Ajuste de Scroll (<small>Slides</small>)</a></li>
+        <li><a href="motion.html">Movimiento en CSS</a></li>
         <li><a href="index.html#"></a></li>
     </ul>
     </article>
